name:                io-streams-http
version:             0.1.0.0
synopsis:            http-client for io-streams
description:         Thin io-streams wrapper for http-client
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2014
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.IO.Streams.HTTP
  hs-source-dirs:      src
  build-depends:       HsOpenSSL
                     , base >=4.7 && <4.8
                     , bytestring
                     , http-client
                     , http-client-tls
                     , io-streams
                     , mtl >= 2.2.1
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010
